# doc-ingest

./: .gitignore  API_ALIGNMENT_GUIDE.md  AUTONOMOUS_DOCUMENT_EXTRACTION_PLATFORM.md  BUILD_OPTIMIZATION_REPORT.md  COMPILATION_VALIDATION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  COORDINATION_BUILD_OPTIMIZATION_SUMMARY.md  Cargo.toml  DEPENDENCY_ANALYSIS_REPORT.md  DEPENDENCY_OPTIMIZATION_STRATEGIES.md  FINAL_TEST_MISSION_REPORT.md  FUNCTIONAL_TEST_EXECUTION_REPORT.md  JAVASCRIPT_DEPENDENCY_REMOVAL_REPORT.md  MEMORY_OPTIMIZATION_SUMMARY.md  NEURAL_CORE_MODULE_FIX_REPORT.md  PHASE1_VALIDATION_REPORT.md  PHASE2_ERROR_FIX_RECOMMENDATIONS.md  PHASE3_QUALITY_ENGINEERING_REPORT.md  PHASE4_COMPLETION_VALIDATION_REPORT.md  PLUGIN_HOTRELOAD_ENHANCEMENT_SUMMARY.md  README.md  SECURITY_INTEGRATION_SUMMARY.md  WASM_API_IMPLEMENTATION_SUMMARY.md  WASM_INTEGRATION_ASSESSMENT.md  build-optimize.sh  build-test-report.md  build_coordination_benchmark.sh  daa-rust-library-analysis.md  fix-critical-dependencies.sh  integration_test_manual.rs  phase4_coverage_analysis.md  phase4_remaining_fixes_report.md  phase4_test_implementation_priority.md  serde_fixes_summary.md  standalone_test  standalone_test.rs  tarpaulin.toml  test_format  test_format.rs  test_ruv_fann_api.rs  (+1 more)
neural-doc-flow/: Cargo.toml  lib.rs
neural-doc-flow-api/: BUILD_OPTIMIZATION_REPORT.md  Cargo.toml  FEATURES.md  README.md  bench_compile.sh  build.rs
neural-doc-flow-api/.cargo/: config.toml
neural-doc-flow-api/examples/: server_config.toml
neural-doc-flow-api/migrations/: 001_initial.sql
neural-doc-flow-api/src/: auth.rs  config.rs  error.rs  jobs.rs  lib.rs  models.rs  monitoring.rs  routes.rs  security.rs  state.rs  utils.rs
neural-doc-flow-api/src/handlers/: auth.rs  health.rs  metrics.rs  mod.rs  openapi.rs  process.rs  result.rs  status.rs
neural-doc-flow-api/src/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs
neural-doc-flow-api/tests/: api_auth_tests.rs  api_core_tests.rs  api_handler_tests.rs  api_state_tests.rs
neural-doc-flow-api/tests/common/: mod.rs
neural-doc-flow-coordination/: BUILD_OPTIMIZATION_REPORT.md  Cargo.toml  DAA_COMPLETION_SUMMARY.md  build-optimize.sh  daa_test  daa_test_standalone.rs  fault_tolerance.rs  lib.rs  lib_optimized.rs  resources.rs
neural-doc-flow-coordination/.cargo/: config.toml
neural-doc-flow-coordination/agents/: base.rs  consensus_coordinator.rs  controller.rs  enhancer.rs  extractor.rs  formatter.rs  mod.rs  pipeline_connector.rs  validator.rs
neural-doc-flow-coordination/messaging/: fault_tolerance.rs  mod.rs  priority_queue.rs  protocols.rs  routing.rs
neural-doc-flow-coordination/src/: agent.rs  consensus.rs  lib.rs  messaging.rs  minimal_lib.rs  state.rs  topology.rs
neural-doc-flow-coordination/tests/: coordination_test.rs  daa_integration_test.rs
neural-doc-flow-coordination/topologies/: builder.rs  mod.rs
neural-doc-flow-core/: Cargo.toml  PHASE4_COMPLETION_SUMMARY.md  README.md  test_string
neural-doc-flow-core/examples/: document_engine_example.rs
neural-doc-flow-core/src/: config.rs  document.rs  engine.rs  error.rs  lib.rs  log_workaround.rs  memory.rs  memory_profiler.rs  neural.rs  optimized_types.rs  result.rs  simd_document_processor.rs  test_engine.rs  test_integration.rs  types.rs
neural-doc-flow-core/src/plugins/: csv_source.rs  docx_source.rs  html_source.rs  image_source.rs  (+2 more)
neural-doc-flow-core/tests/: basic_test.rs  engine_test.rs  security_integration_test.rs
neural-doc-flow-outputs/: Cargo.toml
neural-doc-flow-outputs/src/: html.rs  json.rs  lib.rs  markdown.rs  pdf.rs  xml.rs
neural-doc-flow-outputs/tests/: output_test.rs
neural-doc-flow-plugins/: Cargo.toml
neural-doc-flow-plugins/examples/: core_plugins_demo.rs
neural-doc-flow-plugins/src/: discovery.rs  lib.rs  loader.rs  manager.rs  registry.rs  sandbox.rs  sdk.rs  signature.rs
neural-doc-flow-plugins/tests/: integration_tests.rs
neural-doc-flow-processors/: COMPILATION_ERROR_ANALYSIS.md  Cargo.toml  analysis.rs  enhancement.rs  lib.rs  networks.rs  neural_engine.rs  phase4_architecture_compliance_report.md  quality.rs
neural-doc-flow-processors/neural-engine/: fann_wrapper.rs  layout_analysis.rs  mod.rs  quality_assessment.rs  simd_optimizer.rs  text_enhancement.rs
neural-doc-flow-processors/src/: async_pipeline.rs  config.rs  daa_integration.rs  domain_config.rs  engine.rs  error.rs  lib.rs  memory_optimized.rs  models.rs  processing.rs  simd_optimizer_enhanced.rs  traits.rs  types.rs  utils.rs
neural-doc-flow-processors/tests/: neural_processing_test.rs
neural-doc-flow-python/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.py  pyproject.toml
neural-doc-flow-python/examples/: async_processing.py  basic_usage.py
neural-doc-flow-python/src/: error.rs  lib.rs  plugin_manager.rs  processor.rs  result.rs  security.rs  types.rs
neural-doc-flow-python/tests/: test_basic.py
neural-doc-flow-security/: Cargo.toml  README-SANDBOX.md
neural-doc-flow-security/benches/: sandbox_bench.rs
neural-doc-flow-security/examples/: sandbox_demo.rs
neural-doc-flow-security/src/: analysis.rs  audit.rs  detection.rs  lib.rs  sandbox.rs  simd_security_optimizer.rs  test_build.rs
neural-doc-flow-security/tests/: sandbox_integration.rs
neural-doc-flow-sources/: Cargo.toml
neural-doc-flow-sources/examples/: basic_usage.rs  source_architecture.md
neural-doc-flow-sources/src/: lib.rs  manager.rs  streaming.rs  traits.rs
neural-doc-flow-sources/tests/: integration_test.rs  manager_test.rs  pdf_test.rs  text_test.rs
neural-doc-flow-wasm/: Cargo.toml  README.md  WASM_COMPILATION_GUIDE.md  build-fast.sh
neural-doc-flow-wasm/src/: error.rs  lib.rs  streaming.rs  types.rs  utils.rs
neural-doc-flow-wasm/tests/: node.rs  wasm_test_setup.md  web.rs
neural-doc-flow/.swarm/: memory.db
neural-doc-flow/neural-doc-flow-core/: Cargo.toml
neural-doc-flow/neural-doc-flow-processors/: Cargo.toml
neural-doc-flow/neural-doc-flow-sources/: Cargo.toml
neural-doc-flow/pipeline/: mod.rs
neural-doc-flow/src/: lib.rs  main.rs
(+309 files in other folders)
