[package]
name = "neural-doc-flow-plugins"
edition.workspace = true
authors.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Plugin system with hot-reload support for neural document flow"

[dependencies]
# Core dependencies
neural-doc-flow-core = { path = "../neural-doc-flow-core" }
# neural-doc-flow-security = { path = "../neural-doc-flow-security" }  # Temporarily disabled due to compilation errors
neural-doc-flow-processors = { path = "../neural-doc-flow-processors" }

# Async runtime
tokio = { workspace = true, features = ["full", "fs"] }
async-trait = { workspace = true }

# Dynamic loading
libloading = "0.8"
dlopen2 = "0.7"

# File watching for hot-reload
notify = "6.1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Cryptography for signatures
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Version parsing
semver = "1.0"

# Encoding
base64 = "0.21"

# DOCX processing
zip = "0.6"
roxmltree = "0.19"

# Image processing (optional, feature-gated)
image = { version = "0.24", optional = true }

# CLI
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
rand = "0.8"

[features]
default = []
image_processing = ["image"]
full = ["image_processing"]
