[package]
name = "neural-doc-flow-processors"
version = "0.1.0"
edition = "2021"
authors = ["DAA Neural Coordinator"]
description = "Neural network processors for high-performance document enhancement"

[dependencies]
# Core dependency
neural-doc-flow-core = { path = "../neural-doc-flow-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Text processing
regex = "1.0"

# Random number generation for neural networks
rand = "0.8"

# Mathematical operations for neural networks
ndarray = { workspace = true }

# Performance utilities
rayon = { version = "1.7", optional = true }
crossbeam = { version = "0.8", optional = true }
parking_lot = { version = "0.12", optional = true }

# SIMD dependencies  
wide = { version = "0.7", optional = true }
bytemuck = { version = "1.13", optional = true }

# Neural processing dependencies - Pure Rust with ruv-FANN
ruv-fann = { version = "0.1.6", optional = true }

# Performance monitoring
metrics = { version = "0.21", optional = true }

# Binary serialization
bincode = { workspace = true }

# TOML parsing
toml = "0.8"

# System utilities
num_cpus = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Memory management
bytes = { workspace = true }

# Async utilities
futures = { workspace = true }

[features]
default = ["performance"]
performance = ["rayon", "parking_lot", "crossbeam"]
neural = ["ruv-fann"]
simd = ["wide", "bytemuck"]
monitoring = ["metrics"]

[lib]
name = "neural_doc_flow_processors"
path = "src/lib.rs"