[package]
name = "neural-doc-flow-processors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Neural network processors for high-performance document enhancement"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependency
neural-doc-flow-core = { path = "../neural-doc-flow-core" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Text processing
regex = { workspace = true }

# Random number generation for neural networks
rand = { workspace = true }

# Mathematical operations for neural networks
ndarray = { workspace = true }

# Performance utilities
rayon = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# SIMD dependencies  
wide = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

# Neural processing dependencies - Pure Rust with ruv-FANN
ruv-fann = { workspace = true, optional = true }

# Performance monitoring
metrics = { workspace = true, optional = true }

# System utilities
num_cpus = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Memory management
bytes = { workspace = true }

[features]
default = ["performance"]
performance = ["rayon", "parking_lot", "crossbeam"]
neural = ["ruv-fann", "simd"]
simd = ["wide", "bytemuck"]
monitoring = ["metrics"]

[lib]
name = "neural_doc_flow_processors"
path = "src/lib.rs"